--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title> whats up</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="3">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Flashcards</title>
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -12,15 +14,30 @@
     <header>
         <div class="container">
             <div class="nav">
-                <h1>Flashcards</h1>
+                <h1>Flards</h1>
                 <div>
                     <button onclick="showCreateCardBox()">New Card</button>
-                    <button>Del Cards</button>
+                    <button onclick="delCards()">Del Cards</button>
                 </div>
             </div>
         </div>
     </header>
+    <div class="container">
+        <div class="create-box">
+            <h2 style="text-align: center; color: black;">Create Flashcard</h2>
+            <label for="question">Question</label>
+            <textarea id="question"></textarea>
+            <br />
+            <label for="answer">Answer</label>
+            <textarea id="answer"></textarea>
+            <div>
+                <button onclick="addFlashcard">Save</button>
+                <button onclick="delCards()">Del Cards</button>
+            </div>
+          
+        </div>
+    </div>
     
-    <script src="js/script.js"></script>s
+    <script src="js/script.js"></script>
 </body>
 </html>
